k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fedex
  labels:
    app.kubernetes.io/part-of: fedex-notification-service
