k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: fedex
  labels:
    app: backend
    app.kubernetes.io/part-of: fedex-notification-service
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
